run-1.46（进行中）
------------------------------------------------------------------------
1.增加脚本自我重启时，对-s参数的强制继承。这个设定使得在droplet.py环境中的子进程脚本能互相避免deadlock问题
2.将从数据库中查询最新值（主要见于login时与主服务器交流信息）的超时设定从600秒提升至900秒


run-1.45
------------------------------------------------------------------------
1.上一版本的改动出现若干bug，现注逐一修复：
    a.由于直接使用login页面来test连接，导致cookies失效。原因是目前cookies加载安排在test连接之后，
      所以访问login页面时，手里并没有cookies。此问题的解决方案并不是提前加载cookie那么简单，在此不详述
    b.修复验证码错误的问题。查找页面元素时，注意避免已经存在而只是没显示出来的元素
2.本版本新增timeout功能。在脚本执行任何action时，如果响应超过1分钟，则判定为卡住
  卡住之后的支持三种方案（脚本默认采用第二种）
    a.直接跳过当前action
    b.重启selenium并且重新login，并继续下一个action
    c.重启脚本
3.弃用InstaPy首次检查login状态的函数，改为用常规手段检测，有轻微提速
4.修改登录成功事件的产生逻辑。现在当这个事件产生时，就已经完成和主服务器的同步（比如cookies），可以安全退出脚本
5.完善内部的stdout和stderr流的相互连接的逻辑


run-1.44
------------------------------------------------------------------------
1.修改login逻辑，再次大幅提升login速度
    a.直接使用login页面来test连接
    b.查找页面元素时，进一步优化将所有可以页面，正向及反向的特征同时查找，最大程度避免超时错误
2.增加对登录成功的判断的准确性。如果进入到/login登录页面，而非/accounts/login登录页面，则判断为此IP被屏蔽操作，直接退出
3.新增登录过程中重新获取验证码的功能，填写验证码时输入NEWONE，脚本则判定用户需要获取新验证码


droplet-1.03
------------------------------------------------------------------------
1.修复关闭子进程时，由于子进程已经退出（比如login脚本成功即自动退出）导致kill的时候发生异常的问题
2.droplet.ini配置文件也将保存上次droplet.py运行的type参数
3.解决ubuntu-18.04及以上版本中，默认不存在/etc/rc.local的问题
    a.新版install.sh自带创建rc.local的命令
    b.新版install.sh增加重复运行的判断。可以多次运行install.sh而不发生冲突


run-1.43
------------------------------------------------------------------------
1.新增-ap特性：支持按照特定的group和tag来分配代理。现在-ap可以附加group，tag两个参数，同时兼容老用法
2.修改关于统计action成功率方面和主服务器的交流方式。针对代理的脚本action成功率统计功能已经开放
3.新增无cookies模式，强制重新登录，配合前端登录模块
4.跳过慢、不准确、没用的bypass-suspicious-page，直接用刷新浏览器代替


run-1.42
------------------------------------------------------------------------
1.脚本在Monitor软重启时将清理所有firefox相关子进程，大幅回收内存
2.修复在主服务器关闭时，run.py每轮检查新任务时没抓连接异常导致的退出


droplet-1.02
------------------------------------------------------------------------
1.增加异常捕捉判断。增加对错误请求或恶意请求的防护能力