@@ -96,22 +96,34 @@ pull最近登录成功的、使用在相同version的run.py脚本里的密码，
 
 
 
--rc, --retry-credentials [on|off]
+-rc, --retry-credentials [count]
 ------------------------------------------------------------------------
 该参数指出，在提供了错误的用户名、密码的时候，是否进行下一轮重试。
-该参数可选取值为"on"或"off"。如果参数缺省，默认为"on"。
+改参数的附加参数count指明允许的重试次数。
+如果主参数不存在，count设定为0，即不重试；如果主参数存在但count不存在，默认为-1，即无限次。
 在通过浏览器在云上开启脚本的情况下，如果对密码无把握，可以通过关闭重试来防止云上的脚本无限等待新密码。
 如果参数开启，脚本默认通过命令行询问新的账号密码。
 
 
 
--rp, --retry-proxy [on|off]
+-rp, --retry-proxy [count]
 ------------------------------------------------------------------------
 该参数表明，在代理无法连接网络的时候，进行重试。
-该参数可选取值为"on"或"off"。如果参数缺省，默认为"on"。
+改参数的附加参数count指明允许的重试次数。
+如果主参数不存在，count设定为0，即不重试；如果主参数存在但count不存在，默认为-1，即无限次。
 如果关闭重试，那么在登录前，如果检测到代理（或本地网络）无效，脚本将直接退出。
 如果参数开启，脚本默认通过命令行询问新的账号密码。
 如果-ap参数同时存在，那就不询问命令行，直接请求后台重新分配代理。
+
+
+
+-rl, --retry-login [count]
+------------------------------------------------------------------------
+该参数表明，在因为疑难杂症，比如可能连接被instagram屏蔽的时候，是否进行重试整个login流程。
+改参数的附加参数count指明允许的重试次数。
+如果主参数不存在，count设定为0，即不重试；如果主参数存在但count不存在，默认为-1，即无限次。
+不同于上述密码重试和代理重试的地方是，登录重试相当于整个进程的重启：
+包括初始化环境，重新打开浏览器，重新连接代理，重新访问login页面。
 
 
 
@@ -143,13 +155,13 @@ pull最近登录成功的、使用在相同version的run.py脚本里的密码，
 
 
 
--m, --merge [logID]
+-m, --merge [instance]
 ------------------------------------------------------------------------
 把服务器上当前IG用户最近的一条log记录，作为此脚本的log目标。
 此参数存在时，只为从未跑过的IG用户创建log记录。只要曾经跑过，就自动延续最近活跃的log记录。
 此参数不存在时，任何脚本参数的变动都会导致新log记录的产生。
-此参数可跟随一个附加参数logID。
-如果附加参数存在，则脚本log延续到指定ID的log记录，而非自动延续最近活跃的那条。
+此参数可跟随一个附加参数instance。
+如果附加参数存在，则脚本log延续到指定instance的log记录，而非自动延续最近活跃的那条。
 **如果因此导致两个正在运行的脚本共享同一条log记录，那它们将无法正常接收在线发送的任务。
 
 
@@ -157,6 +169,8 @@ pull最近登录成功的、使用在相同version的run.py脚本里的密码，
 -s, --silent
 ------------------------------------------------------------------------
 在本地terminal不打印任何信息。仅仅向服务器汇报log。
+当多进程共享公共IO流例如stdout时，-s能杜绝deadlock的发生；
+由于不与标准流交互，在脚本以子进程形式运行时，也能轻微减少没必要的系统资源占用。
 
 
 
