@@ -1,7 +1,14 @@
+droplet-1.04（进行中）
+------------------------------------------------------------------------
+1.配合前端、脚本两方面的需求，droplet服务在开启新login脚本时，默认设定2次重新登录机会
+
+
 run-1.46（进行中）
 ------------------------------------------------------------------------
 1.增加脚本自我重启时，对-s参数的强制继承。这个设定使得在droplet.py环境中的子进程脚本能互相避免deadlock问题
 2.将从数据库中查询最新值（主要见于login时与主服务器交流信息）的超时设定从600秒提升至900秒
+3.现在在登录过程中，提交用户名密码后，直接进入到另一个登陆界面，疑似被屏蔽时，允许进行一定次数的重试
+4.同时修改重试用户名密码，重试代理两方面的参数设定方式
 
 
 run-1.45
